--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,7 +10,7 @@ layout: default
   });
 </script>
     <div class="jumbotron" style="text-align: center;">
-      <img class="author-profile-img" src="/assets/img/profile.jpeg" />
+      <img class="author-profile-img" src="https://avatars0.githubusercontent.com/u/14982486?s=460&u=7c4afc1ea5ef6af3f0ea19bb4f7a4194c01b6153&v=4" />
       <p class="jumbotron-heading">Hi, I am {{site.author}} !</p>
       <p class="lead" id="typewriteText"></p>
          {%- include github_star_button.html -%}
