--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -35,7 +35,7 @@ layout: default
               <div id="article-container">
                 <div id="article-img">
                   <img
-                    src="/assets/img/{{site.author_logo}}"
+                    src="https://avatars0.githubusercontent.com/u/14982486?s=460&u=7c4afc1ea5ef6af3f0ea19bb4f7a4194c01b6153&v=4"
                     width="50px"
                     height="50px"
                   />
