--- a/_sass/devlopr.scss
+++ b/_sass/devlopr.scss
@@ -350,7 +350,7 @@ header {
 /* jumbotron */
 .jumbotron {
     background-color: var(--main-background-color) !important;
-    background-image: url('https://images.pexels.com/photos/1037992/pexels-photo-1037992.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260');
+    background-image: url('https://lh3.googleusercontent.com/cQBV4B63iua59neXGIRv5vJQnyWfzGUYhPJFNQ_3s7SmWx26_voSkGVVVMgxhS3bH64byP79B7eyrwLk1w=w477-h220-rw');
     background-attachment: fixed;
     background-size: cover;
     background-position: center;
