--- a/_sass/devlopr.scss
+++ b/_sass/devlopr.scss
@@ -350,7 +350,7 @@ header {
 /* jumbotron */
 .jumbotron {
     background-color: var(--main-background-color) !important;
-    background-image: url('https://lh3.googleusercontent.com/cQBV4B63iua59neXGIRv5vJQnyWfzGUYhPJFNQ_3s7SmWx26_voSkGVVVMgxhS3bH64byP79B7eyrwLk1w=w477-h220-rw');
+    background-image: url('https://luizleite-hotmart.github.io//pages/assets/img/gallery/IMG_20200518_140551.jpg');
     background-attachment: fixed;
     background-size: cover;
     background-position: center;
