--- a/_includes/author_skills.html
+++ b/_includes/author_skills.html
@@ -1,2 +1,2 @@
-<p> HTML , CSS , Javascript , PHP, Python, C</p>
-<p> Adobe XD, Inkscape, Git, Linux </p>
+<p> Java, Spring Boot, Quarkus, Javascript </p>
+<p> AWS, Docker, Mysql, Git, Linux, HTML </p>
