--- a/_includes/algolia_search.html
+++ b/_includes/algolia_search.html
@@ -51,7 +51,8 @@
                                 <img src="{{site.url}}{{site.baseurl}}/assets/img/{{ site.author_logo }}" class="author-profile-img">
                                 <h4 class="card-title">${ hit.title }</h4>
 
-<!--                                <h6 class="card-subtitle mb-2 text-muted">${moment.unix(hit.date)}</h6>-->
+<!--                                <h6 class="card-subtitle mb-2 text-muted">${moment.unix(hit.date).format('MMM D, YYYY')}</h6>-->
+                                <h6 class="card-subtitle mb-2 text-muted">${moment.unix(hit.date)}</h6>
                                 <p class="card-text">${hit.summary }</p>
 
                                 <a href="${hit.url}" data-disqus-identifier="${hit.url}" class="btn btn-primary btn-sm">Read</a>
