--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,8 +13,6 @@ layout: default
       <img class="author-profile-img" src="https://avatars0.githubusercontent.com/u/14982486?s=460&u=7c4afc1ea5ef6af3f0ea19bb4f7a4194c01b6153&v=4" />
       <p class="jumbotron-heading">Hi, I am {{site.author}} !</p>
       <p class="lead" id="typewriteText"></p>
-<!--         {%- include github_star_button.html -%}-->
-<!--         {%- include github_fork_button.html -%}-->
     </div>
     <div class="col-lg-8 offset-md-2">
       <section id="recent-articles">
@@ -23,7 +21,7 @@ layout: default
             <h1 class="card-title">Recent Articles</h1>
           </div>
           <div id="recent-articles-show-all">
-            <a class="btn btn-lg btn-dark" href="/blog"> View All </a>
+            <a class="btn btn-lg btn-dark" href="/pages/blog"> View All </a>
           </div>
         </div>
         <br />
